# spotify-sandbox

./: .gitignore  Dockerfile  README.md  docker-compose.yml  requirements.txt  setup.cfg
backend/: Dockerfile  requirements.txt  secret.json.sample
backend/scripts/: ranking_refresh_time.py
backend/spotify/: __init__.py  api.py  app.py  config.py  data.py  user.py
backend/spotify/service/: user.py
backend/test/: api_test.py
frontend/: package-lock.json  package.json
frontend/src/: App.tsx  Track.tsx  index.tsx
frontend/src/components/pages/: Login.tsx  LoginCallback.tsx
frontend/src/components/pages/App/: index.test.tsx  index.tsx
frontend/src/components/pages/RankingPage/: index.tsx
frontend/src/components/pages/RankingPage/ArtistRow/: index.tsx
frontend/src/components/pages/RankingPage/TrackRow/: index.tsx
frontend/src/components/projects/PlaylistReplaceButton/: index.tsx
frontend/src/contexts/: JwtContext.tsx
scripts/: ranking_refresh_time.py
spotify/: __init__.py  api.py  app.py  cli.py  config.py  data.py  service.py  user.py
spotify/fastapi/: staticfiles.py
spotify/service/: __init__.py  ranking.py
spotify/templates/: home.html  layout.html  playlists.html
test/: api_test.py
