[metadata]
name = spotify-sandbox
version = 0.0.1

[options]
packages = find:
install_requires =
  fastapi
  aiofiles
  uvicorn
  jinja2
  requests
  lxml

[options.package_data]
#spotify = templates/*.html
spotify =
  public/*
  public/*/*
  public/*/*/*
  public/*/*/*/*

[options.entry_points]
console_scripts =
  spotify = spotify.cli:main

